--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -62,26 +62,58 @@ jobs:
       id: release-notes
       if: startsWith(github.ref, 'refs/tags/')
       uses: actions/github-script@v7
+      continue-on-error: true
       with:
         script: |
-          const { data: release } = await github.rest.repos.getReleaseByTag({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag: context.ref.replace('refs/tags/', '')
-          });
+          try {
+            const { data: release } = await github.rest.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: context.ref.replace('refs/tags/', '')
+            });
 
-          const releaseNotes = release.body || '';
-          core.setOutput('notes', releaseNotes);
+            const releaseNotes = release.body || '';
+            core.setOutput('notes', releaseNotes);
+          } catch (error) {
+            console.log('Release not found, generating changelog-based release notes');
+            const tagName = context.ref.replace('refs/tags/', '');
+
+            // Try to get commits since last tag
+            try {
+              const { data: commits } = await github.rest.repos.listCommits({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                per_page: 50
+              });
+
+              let changelog = `## Release ${tagName}\n\n`;
+              changelog += `### Changes\n\n`;
+
+              for (const commit of commits) {
+                if (commit.commit.message && !commit.commit.message.startsWith('Merge')) {
+                  changelog += `- ${commit.commit.message.split('\n')[0]}\n`;
+                }
+              }
+
+              core.setOutput('notes', changelog);
+            } catch (commitError) {
+              console.log('Could not generate changelog, using simple release notes');
+              const releaseNotes = `## Release ${tagName}\n\n### Changes\n\n- Automated release from GitHub Actions\n- Docker image built and pushed to GHCR`;
+              core.setOutput('notes', releaseNotes);
+            }
+          }
 
     - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
+      continue-on-error: true
       with:
-        body: ${{ steps.release-notes.outputs.notes }}
+        body: ${{ steps.release-notes.outputs.notes || format('Release {0}', github.ref_name) }}
         files: |
           LICENSE
           README.md
         draft: false
         prerelease: contains(github.ref, '-beta') || contains(github.ref, '-alpha') || contains(github.ref, '-rc')
+        generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.PKG_GITHUB_TOKEN }}
