--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,14 +29,6 @@ jobs:
     - name: Install dependencies
       run: go mod tidy
 
-    - name: Run linter
-      run: |
-        go install golang.org/x/lint/golint@latest
-        golint ./...
-
-    - name: Run vet
-      run: go vet ./...
-
     - name: Run fmt check
       run: |
         if [ "$(gofmt -s -l . | wc -l)" -ne 0 ]; then
@@ -44,6 +36,15 @@ jobs:
           gofmt -s -l .
           exit 1
         fi
+
+    - name: Run vet
+      run: go vet ./...
+
+    - name: Run linter
+      run: |
+        go install golang.org/x/lint/golint@latest
+        golint ./...
+      continue-on-error: true
 
     - name: Run tests
       run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
@@ -71,11 +72,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Run security scan
-      uses: securecodewarrior/github-action-add-sarif@v1
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        sarif-file: 'gosec.sarif'
-      continue-on-error: true
+        go-version: '1.24'
+        cache: true
 
     - name: Install gosec
       run: |
@@ -83,6 +84,7 @@ jobs:
 
     - name: Run gosec
       run: gosec -fmt=sarif -out=gosec.sarif ./...
+      continue-on-error: true
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
