--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
   "fx-extension.developCopilotPlugin": true,
-  "go.goroot": "/Users/wangjuntao/go/pkg/mod/golang.org/toolchain@v0.0.1-go1.23.7.darwin-arm64",
+  "go.goroot": "/Users/wangjuntao/go/pkg/mod/golang.org/toolchain@v0.0.1-go1.24.7.darwin-arm64",
   "editor.formatOnSave": true,
-  "chatgpt.openOnStartup": true
+  "chatgpt.openOnStartup": true,
+  "gopls": {
+    "env": {
+      "GOTOOLCHAIN": "go1.24.7"
+    }
+  },
+  "go.toolsEnvVars": {
+    "GOTOOLCHAIN": "go1.24.7"
+  }
 }
