feat: 更新 .gitignore，添加 .cache 和 ansible 目录；修改 launch.json 参数格式；在 Makefile 中添加 ansible-mcpops 目标；启用 security.yaml 中的 sudo 支持并扩展命令列表

--- a/etc/security.yaml
+++ b/etc/security.yaml
@@ -22,8 +22,8 @@
   enable_pty: false
   rate_limit_per_min: 120
   sudo:
-    enabled: false               # 设置为 true 时自动用 sudo -n 执行 commands 列表
-    commands: ["systemctl"]       # 需要 sudo 的命令，可以按需扩展
+    enabled: true               # 设置为 true 时自动用 sudo -n 执行 commands 列表
+    commands: ["systemctl","docker"]       # 需要 sudo 的命令，可以按需扩展
     command_regex: []             # 或者使用正则，例如: ["^(apt|yum)$"]
     preserve_env: false           # 是否保留环境变量 (sudo -E)
     args: []                      # 额外附加在 sudo 后的参数，例如 ["-H"]
