--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "env": {
                 "DEBUG": "true"
             },
-            "args": ["-c", "config.test.yaml"]
+            "args": ["--config", "config.test.yaml"]
         }
     ]
 }
